--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,7 +3,9 @@
         Options -MultiViews
     </IfModule>
 
+    Options +FollowSymLinks
     RewriteEngine On
+    RewriteBase /
 
     # Redirect Trailing Slashes...
     RewriteRule ^(.*)/$ /$1 [L,R=301]
@@ -11,5 +13,5 @@
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    RewriteRule . /index.php [L]
 </IfModule>
